--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" type="image/ico" href="logo1.ico">
-  <meta name="google-site-verification" content="ue1jFNWXyQ4r0gEBRJ4_-8vBx6CSBweK9zlHw0UkZys" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="./logo1.ico" type="image/x-icon">
+  <link rel="icon" type="image/ico" href="./logo1.ico">
+  <meta name="google-site-verification" content="ue1jFNWXyQ4r0gEBRJ4_-8vBx6CSBweK9zlHw0UkZys">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Rediva</title>
   <script type="application/ld+json">
     {
@@ -23,11 +24,29 @@
       }]
     }
     </script>
-  <meta name="description" content="Explore stunning, unique and creative products, Happy to see you here." />
+  <meta name="description"
+    content="Every T-Shirt has a story, what's yours? Explore our stunning, unique and creative products, Happy to see you here at rediva.">
   <meta name="robots" content="index, follow">
-  <meta name="theme-color" content="#000000" />
-  <meta name="keywords" content="redlifestyle,tshirts,shirts,crop clothing,apperal,clothing,lifestyle,fashion,rediva" />
-  <meta name="author" content="Rediva" />
+  <meta name="revisit-after" content="1 days">
+  <meta name="keywords"
+    content="rediva,rediva ma,rediva lifestyle,tshirts,shirts,crop clothing,apperal,clothing,lifestyle,fashion">
+  <meta name="author" content="Rediva">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://rediva-lifestyle.web.app/">
+  <meta property="og:title" content="Rediva">
+  <meta property="og:description"
+    content="Rediva, Every T-Shirt has a story, what's yours?. Explore our stunning, unique and creative products, Happy to see you here.">
+  <meta property="og:image" content="https://rediva-lifestyle.web.app/Rediva.webp">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://rediva-lifestyle.web.app/">
+  <meta property="twitter:title" content="Rediva">
+  <meta property="twitter:description"
+    content="Rediva, Every T-Shirt has a story, what's yours?. Explore our stunning, unique and creative products, Happy to see you here.">
+  <meta property="twitter:image" content="https://rediva-lifestyle.web.app/Rediva.webp">
 
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -49,7 +68,7 @@
 
 </head>
 
-<body oncontextmenu="return false;">
+<body>
   <div id="root"></div>
 </body>
 
