--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         "@type": "SearchAction",
         "target": {
           "@type": "EntryPoint",
-          "urlTemplate": "https://rediva-lifestyle.web.app/search/?search={search_term_string}"
+          "urlTemplate": "https://redtronics.web.app/search/?search={search_term_string}"
         },
         "query-input": "required name=search_term_string"
       }]
@@ -29,7 +29,7 @@
   <meta name="robots" content="index, follow">
   <meta name="revisit-after" content="1 days">
   <meta name="keywords"
-    content="rediva,rediva ma,rediva lifestyle,tshirts,shirts,crop clothing,apperal,clothing,lifestyle,fashion">
+    content="rediva,rediva,rediva lifestyle,tshirts,shirts,crop clothing,apperal,clothing,lifestyle,fashion">
   <meta name="author" content="Rediva">
 
   <!-- Open Graph / Facebook -->
@@ -55,15 +55,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics G-FJHBJ5TPYL -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-189389690-1"></script>
 
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-189389690-1');
-  </script>
 
 
 </head>
